@@ -2548,6 +2548,24 @@ class Core(object):
         elif( len(final_id) == 1 ):
           records_dict['records_id'] = final_id[0]
           new_records = self.db_instance.ListRow('records', records_dict)
+          if( len(new_records) == 0 ):
+            raise errors.CoreError(
+                'Tried to find record with ID "%s" type "%s" target "%s" '
+                'zone_name "%s" view "%s" ttl "%s" but could not.' % (
+                    final_id[0], records_dict['record_type'],
+                    records_dict['record_target'],
+                    records_dict['record_zone_name'],
+                    records_dict['record_view_dependency'],
+                    records_dict['record_ttl']))
+          if( len(new_records) > 1 ):
+            raise errors.CoreError(
+                'Tried to find record with ID "%s" type "%s" target "%s" '
+                'zone_name "%s" view "%s" ttl "%s" but found multiple.' % (
+                    final_id[0], records_dict['record_type'],
+                    records_dict['record_target'],
+                    records_dict['record_zone_name'],
+                    records_dict['record_view_dependency'],
+                    records_dict['record_ttl']))
           self.db_instance.RemoveRow('records', new_records[0])
         else:
           raise errors.CoreError('Duplicate records found.')
