@@ -1,5 +1,6 @@
 Current Release
 - Fixed ipv6 tests in core helpers regtest.
+- Made specific errors if functions in RemoveRecord fail.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
